[project]
name = "beurer-daylight-lamps"
version = "1.21.0"
description = "Home Assistant integration for Beurer Daylight Therapy Lamps"
requires-python = ">=3.12"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
follow_imports = "normal"
ignore_missing_imports = true

# Strict mode settings
strict = true
warn_unreachable = true
warn_no_return = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

# Per-module overrides for third-party packages without stubs
[[tool.mypy.overrides]]
module = [
    "bleak.*",
    "bleak_retry_connector.*",
    "bluetooth_data_tools.*",
    "habluetooth.*",
    "homeassistant.*",
    "pytest_homeassistant_custom_component.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["custom_components/beurer_daylight_lamps"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
